--- a/index.html
+++ b/index.html
@@ -147,8 +147,10 @@
 <body>
 <center>
     <h2>Anotações</h2>
-    <h3>As anotações ficam salvas na memória interna do navegador. <br> Se o histórico for apagado, as anotações serão perdidas.</h3>
+    <center>
+    <h4>As anotações ficam salvas na memória interna do navegador. <br> Se o histórico for apagado, as anotações serão perdidas.</h4>
 </center>
+    <center>
 <br>
 <br>
     <div id="todo-form">
